Updated ALL notebooks

--- a/notebooks/community/Triangle-Counting.ipynb
+++ b/notebooks/community/Triangle-Counting.ipynb
@@ -11,13 +11,13 @@
     "Notebook Credits\n",
     "* Original Authors: Bradley Rees\n",
     "* Created:   08/01/2019\n",
-    "* Last Edit: 08/16/2020\n",
+    "* Last Edit: 06/22/2022\n",
     "\n",
-    "RAPIDS Versions: 0.13\n",
+    "RAPIDS Versions: 0.15\n",
     "\n",
     "Test Hardware\n",
     "\n",
-    "* GV100 32G, CUDA 10.2\n",
+    "* Tesla V100 32G, CUDA 11.5\n",
     "\n",
     "\n",
     "## Introduction\n",
@@ -83,19 +83,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import needed libraries\n",
     "import cugraph\n",
     "import cudf\n",
-    "from collections import OrderedDict"
+    "from collections import OrderedDict\n",
+    "\n",
+    "# Import a built-in dataset\n",
+    "from cugraph.experimental.datasets import karate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,41 +111,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Some Prep"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define the path to the test data  \n",
-    "datafile='../data/karate-data.csv'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "---\n",
     "# NetworkX"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read the data, this also created a NetworkX Graph \n",
+    "datafile='../data/karate-data.csv'\n",
     "file = open(datafile, 'rb')\n",
     "Gnx = nx.read_edgelist(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,9 +138,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'1': 18,\n",
+       " '2': 12,\n",
+       " '3': 11,\n",
+       " '4': 10,\n",
+       " '5': 2,\n",
+       " '6': 3,\n",
+       " '7': 3,\n",
+       " '8': 6,\n",
+       " '9': 5,\n",
+       " '11': 2,\n",
+       " '12': 0,\n",
+       " '13': 1,\n",
+       " '14': 6,\n",
+       " '18': 1,\n",
+       " '20': 1,\n",
+       " '22': 1,\n",
+       " '32': 3,\n",
+       " '31': 3,\n",
+       " '10': 0,\n",
+       " '28': 1,\n",
+       " '29': 1,\n",
+       " '33': 13,\n",
+       " '17': 1,\n",
+       " '34': 15,\n",
+       " '15': 1,\n",
+       " '16': 1,\n",
+       " '19': 1,\n",
+       " '21': 1,\n",
+       " '23': 1,\n",
+       " '24': 4,\n",
+       " '26': 1,\n",
+       " '30': 4,\n",
+       " '25': 1,\n",
+       " '27': 1}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# NetworkX does not give a single count, but list how many triangles each vertex is associated with\n",
     "nx_count"
@@ -161,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,9 +204,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "135"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "count"
    ]
@@ -200,38 +242,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Read in the data - GPU\n",
-    "cuGraph depends on cuDF for data loading and the initial Dataframe creation\n",
-    "\n",
-    "The data file contains an edge list, which represents the connection of a vertex to another.  The `source` to `destination` pairs is in what is known as Coordinate Format (COO).  In this test case, the data is just two columns.  However a third, `weight`, column is also possible"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Test file    \n",
-    "gdf = cudf.read_csv(datafile, delimiter='\\t', names=['src', 'dst'], dtype=['int32', 'int32'] )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Create a Graph "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a Graph using the source (src) and destination (dst) vertex pairs from the Dataframe \n",
-    "G = cugraph.Graph()\n",
-    "G.from_cudf_edgelist(gdf, source='src', destination='dst')"
+    "G = karate.get_graph()\n",
+    "G = G.to_undirected()"
    ]
   },
   {
@@ -243,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,9 +274,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "135"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cu_count"
    ]
@@ -285,9 +317,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cugraph_dev",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
-   "name": "cugraph_dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -299,7 +331,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f708a36acfaef0acf74ccd43dfb58100269bf08fb79032a1e0a6f35bd9856f51"
+   }
   }
  },
  "nbformat": 4,
