--- a/notebooks/components/ConnectedComponents.ipynb
+++ b/notebooks/components/ConnectedComponents.ipynb
@@ -20,6 +20,7 @@
     "| --------------|------------|------------------|-----------------|--------------------|\n",
     "| Kumar Aatish  | 08/13/2019 | created          | 0.15            | GV100, CUDA 10.2   |\n",
     "| Brad Rees     | 10/18/2021 | updated          | 21.12 nightly   | GV100, CUDA 11.4   |\n",
+    "| Ralph Liu     | 06/22/2022 | updated/tested   | 22.08           | TV100, CUDA 11.5   |\n",
     "\n",
     "\n",
     "\n",
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,29 +127,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Read graph data from file\n",
-    "\n",
-    "cuGraph depends on cuDF for data loading and the initial Dataframe creation on the GPU.\n",
-    "\n",
-    "The data file contains an edge list, which represents the connection of a vertex to another. The source to destination pairs is in what is known as Coordinate Format (COO).\n",
-    "\n",
-    "In this test case the data in the test file is expressed in three columns, source, destination and the edge weight. While edge weight is relevant in other algorithms, cuGraph connected component calls do not make use of it and hence that column can be discarded from the dataframe."
+    "### 1. Import a Built-In Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Test file\n",
-    "datafile='../data/netscience.csv'\n",
-    "\n",
-    "# the datafile contains three columns, but we only want to use the first two. \n",
-    "# We will use the \"usecols' feature of read_csv to ignore that column\n",
-    "\n",
-    "gdf = cudf.read_csv(datafile, delimiter=' ', names=['src', 'dst', 'wgt'], dtype=['int32', 'int32', 'float32'], usecols=['src', 'dst'])\n",
-    "gdf.head(5)"
+    "from cugraph.experimental.datasets import netscience"
    ]
   },
   {
@@ -160,13 +148,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a Graph using the source (src) and destination (dst) vertex pairs from the Dataframe\n",
-    "G = cugraph.Graph()\n",
-    "G.from_cudf_edgelist(gdf, source='src', destination='dst')"
+    "G = netscience.get_graph()"
    ]
   },
   {
@@ -178,9 +164,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>labels</th>\n",
+       "      <th>vertex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1232</td>\n",
+       "      <td>529</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1233</td>\n",
+       "      <td>534</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1233</td>\n",
+       "      <td>535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1235</td>\n",
+       "      <td>544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1235</td>\n",
+       "      <td>545</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   labels  vertex\n",
+       "0    1232     529\n",
+       "1    1233     534\n",
+       "2    1233     535\n",
+       "3    1235     544\n",
+       "4    1235     545"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Call cugraph.weakly_connected_components on the dataframe\n",
     "df = cugraph.weakly_connected_components(G)\n",
@@ -196,9 +251,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of components found :  268\n"
+     ]
+    }
+   ],
    "source": [
     "# Use groupby on the 'labels' column of the WCC output to get the counts of each connected component label\n",
     "label_gby = df.groupby('labels')\n",
@@ -216,9 +279,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of the top 10 largest components are: \n",
+      "        vertex\n",
+      "labels        \n",
+      "1126       379\n",
+      "785         57\n",
+      "112         31\n",
+      "349         28\n",
+      "26          21\n",
+      "384         14\n",
+      "489         14\n",
+      "651         13\n",
+      "580         12\n",
+      "106         11\n"
+     ]
+    }
+   ],
    "source": [
     "# Call nlargest on the groupby result to get the row where the component count is the largest\n",
     "# NOTE: this will change the value of \"vertex\" to be the count and \"labels\" to be an index\n",
@@ -237,9 +320,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vertex Ids that belong to component label 106 : \n",
+      "     labels  vertex\n",
+      "31      106    1412\n",
+      "114     106    1060\n",
+      "732     106    1061\n",
+      "733     106    1062\n",
+      "734     106    1063\n",
+      "735     106    1064\n",
+      "736     106    1065\n",
+      "737     106    1066\n",
+      "738     106    1067\n",
+      "739     106    1068\n",
+      "740     106    1069\n"
+     ]
+    }
+   ],
    "source": [
     "# Query the connected component output to display vertex ids that belong to a component of interest\n",
     "# picking label 106 from above to reduce amount of data printed\n",
@@ -260,9 +363,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>labels</th>\n",
+       "      <th>vertex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1341</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>743</td>\n",
+       "      <td>1345</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>676</td>\n",
+       "      <td>1346</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1411</td>\n",
+       "      <td>1354</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1411</td>\n",
+       "      <td>1355</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   labels  vertex\n",
+       "0       0    1341\n",
+       "1     743    1345\n",
+       "2     676    1346\n",
+       "3    1411    1354\n",
+       "4    1411    1355"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Call cugraph.strongly_connected_components on the dataframe\n",
     "df = cugraph.strongly_connected_components(G)\n",
@@ -278,9 +450,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of components found :  268\n"
+     ]
+    }
+   ],
    "source": [
     "# Use groupby on the 'labels' column of the SCC output to get the counts of each connected component label\n",
     "label_gby = df.groupby('labels')\n",
@@ -297,9 +477,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of the top 10 largest components are: \n",
+      "        vertex\n",
+      "labels        \n",
+      "0          379\n",
+      "4           57\n",
+      "8           31\n",
+      "30          28\n",
+      "5           21\n",
+      "87          14\n",
+      "167         14\n",
+      "55          13\n",
+      "254         12\n",
+      "66          11\n"
+     ]
+    }
+   ],
    "source": [
     "# Call nlargest on the groupby result to get the row where the component count is the largest\n",
     "largest_component = label_count.nlargest(n = 10, columns = 'vertex')\n",
@@ -317,11 +517,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vertex Ids that belong to component label 66 : \n",
+      "     labels  vertex\n",
+      "15       66    1412\n",
+      "130      66    1060\n",
+      "716      66    1061\n",
+      "717      66    1062\n",
+      "718      66    1063\n",
+      "719      66    1064\n",
+      "720      66    1065\n",
+      "721      66    1066\n",
+      "722      66    1067\n",
+      "723      66    1068\n",
+      "724      66    1069\n"
+     ]
+    }
+   ],
    "source": [
     "# Query the connected component output to display vertex ids that belong to a component of interest\n",
     "expr = \"labels == 66\"\n",
@@ -357,9 +577,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cugraph_dev",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
-   "name": "cugraph_dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -371,7 +591,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f708a36acfaef0acf74ccd43dfb58100269bf08fb79032a1e0a6f35bd9856f51"
+   }
   }
  },
  "nbformat": 4,
