--- a/notebooks/link_analysis/HITS.ipynb
+++ b/notebooks/link_analysis/HITS.ipynb
@@ -12,13 +12,13 @@
     "Notebook Credits\n",
     "* Original Authors: Bradley Rees and James Wyles\n",
     "* Created:   06/09/2020\n",
-    "* Updated:   08/16/2020\n",
+    "* Updated:   06/22/2022\n",
     "\n",
     "RAPIDS Versions: 0.15  \n",
     "\n",
     "Test Hardware\n",
     "\n",
-    "* GV100 32G, CUDA 10.0\n",
+    "* Tesla V100 32G, CUDA 11.5\n",
     "\n",
     "\n",
     "## Introduction\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,12 +135,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the path to the test data  \n",
-    "datafile='../data/karate-data.csv'"
+    "# Import a built-in dataset\n",
+    "from cugraph.experimental.datasets import karate"
    ]
   },
   {
@@ -153,18 +153,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read the data, this also created a NetworkX Graph \n",
+    "datafile = \"../data/karate-data.csv\"\n",
     "file = open(datafile, 'rb')\n",
     "Gnx = nx.read_edgelist(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,9 +174,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'1': 0.07141272880825199,\n",
+       "  '2': 0.05342723123553,\n",
+       "  '3': 0.06371906455637479,\n",
+       "  '4': 0.042422737124709,\n",
+       "  '5': 0.015260959706207484,\n",
+       "  '6': 0.015966913503059645,\n",
+       "  '7': 0.01596691350305965,\n",
+       "  '8': 0.03434316721905365,\n",
+       "  '9': 0.0456819251197503,\n",
+       "  '11': 0.015260959706207488,\n",
+       "  '12': 0.010617891511071221,\n",
+       "  '13': 0.016925450792306864,\n",
+       "  '14': 0.045494864068056355,\n",
+       "  '18': 0.018561637037432084,\n",
+       "  '20': 0.02971333388643479,\n",
+       "  '22': 0.018561637037432084,\n",
+       "  '32': 0.03837574186295603,\n",
+       "  '31': 0.035106237976714375,\n",
+       "  '10': 0.020625667749388635,\n",
+       "  '28': 0.026813494117104764,\n",
+       "  '29': 0.026331505777953887,\n",
+       "  '33': 0.06200184647383096,\n",
+       "  '17': 0.004748031847301575,\n",
+       "  '34': 0.07500294215657549,\n",
+       "  '15': 0.020370345825614266,\n",
+       "  '16': 0.020370345825614266,\n",
+       "  '19': 0.020370345825614266,\n",
+       "  '21': 0.020370345825614266,\n",
+       "  '23': 0.020370345825614266,\n",
+       "  '24': 0.03015649750935638,\n",
+       "  '26': 0.011893664396281384,\n",
+       "  '30': 0.027111539628217662,\n",
+       "  '25': 0.011460952230971702,\n",
+       "  '27': 0.015182734330338381},\n",
+       " {'1': 0.07141272880825196,\n",
+       "  '2': 0.05342723123552997,\n",
+       "  '3': 0.06371906455637477,\n",
+       "  '4': 0.04242273712470899,\n",
+       "  '5': 0.015260959706207488,\n",
+       "  '6': 0.01596691350305965,\n",
+       "  '7': 0.01596691350305965,\n",
+       "  '8': 0.03434316721905365,\n",
+       "  '9': 0.0456819251197503,\n",
+       "  '11': 0.015260959706207484,\n",
+       "  '12': 0.010617891511071221,\n",
+       "  '13': 0.01692545079230686,\n",
+       "  '14': 0.04549486406805636,\n",
+       "  '18': 0.018561637037432088,\n",
+       "  '20': 0.0297133338864348,\n",
+       "  '22': 0.018561637037432088,\n",
+       "  '32': 0.038375741862956045,\n",
+       "  '31': 0.03510623797671439,\n",
+       "  '10': 0.020625667749388635,\n",
+       "  '28': 0.026813494117104764,\n",
+       "  '29': 0.026331505777953887,\n",
+       "  '33': 0.06200184647383094,\n",
+       "  '17': 0.0047480318473015785,\n",
+       "  '34': 0.07500294215657544,\n",
+       "  '15': 0.020370345825614276,\n",
+       "  '16': 0.020370345825614276,\n",
+       "  '19': 0.020370345825614276,\n",
+       "  '21': 0.020370345825614276,\n",
+       "  '23': 0.020370345825614276,\n",
+       "  '24': 0.03015649750935639,\n",
+       "  '26': 0.011893664396281381,\n",
+       "  '30': 0.02711153962821767,\n",
+       "  '25': 0.011460952230971695,\n",
+       "  '27': 0.01518273433033838})"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "hits_nx"
    ]
@@ -201,38 +280,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Read in the data - GPU\n",
-    "cuGraph depends on cuDF for data loading and the initial Dataframe creation\n",
-    "\n",
-    "The data file contains an edge list, which represents the connection of a vertex to another.  The `source` to `destination` pairs is in what is known as Coordinate Format (COO).  In this test case, the data is just two columns.  However a third, `weight`, column is also possible"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Read the data  \n",
-    "gdf = cudf.read_csv(datafile, names=[\"src\", \"dst\"], delimiter='\\t', dtype=[\"int32\", \"int32\"] )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Create a Graph "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a Graph using the source (src) and destination (dst) vertex pairs from the Dataframe \n",
-    "G = cugraph.Graph()\n",
-    "G.from_cudf_edgelist(gdf, source='src', destination='dst')"
+    "G = karate.get_graph()"
    ]
   },
   {
@@ -244,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,18 +352,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best vertex is 34 with HUB score of 0.07500292228699207\n"
+     ]
+    }
+   ],
    "source": [
     "print_hub_threshold(gdf_hits, gdf_hits['hubs'].max())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best vertex is 34 with Authorities score of 0.07500298081637535\n"
+     ]
+    }
+   ],
    "source": [
     "print_authorities_threshold(gdf_hits, gdf_hits['authorities'].max())"
    ]
@@ -322,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,9 +404,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>hubs</th>\n",
+       "      <th>authorities</th>\n",
+       "      <th>vertex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>0.075003</td>\n",
+       "      <td>0.075003</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>0.071413</td>\n",
+       "      <td>0.071413</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>0.063719</td>\n",
+       "      <td>0.063719</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        hubs  authorities  vertex\n",
+       "16  0.075003     0.075003      34\n",
+       "17  0.071413     0.071413       1\n",
+       "19  0.063719     0.063719       3"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sort_a.head(3)"
    ]
@@ -347,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,9 +490,273 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>hubs</th>\n",
+       "      <th>authorities</th>\n",
+       "      <th>vertex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>0.075003</td>\n",
+       "      <td>0.075003</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>0.071413</td>\n",
+       "      <td>0.071413</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>0.063719</td>\n",
+       "      <td>0.063719</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>0.062002</td>\n",
+       "      <td>0.062002</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>0.053427</td>\n",
+       "      <td>0.053427</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>0.045682</td>\n",
+       "      <td>0.045682</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>0.045495</td>\n",
+       "      <td>0.045495</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>0.042423</td>\n",
+       "      <td>0.042423</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>0.038376</td>\n",
+       "      <td>0.038376</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>0.035106</td>\n",
+       "      <td>0.035106</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>0.034343</td>\n",
+       "      <td>0.034343</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>0.030157</td>\n",
+       "      <td>0.030156</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.029713</td>\n",
+       "      <td>0.029713</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>0.027112</td>\n",
+       "      <td>0.027112</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>0.026813</td>\n",
+       "      <td>0.026813</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.026332</td>\n",
+       "      <td>0.026332</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.020626</td>\n",
+       "      <td>0.020626</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.020370</td>\n",
+       "      <td>0.020370</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.020370</td>\n",
+       "      <td>0.020370</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0.020370</td>\n",
+       "      <td>0.020370</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0.020370</td>\n",
+       "      <td>0.020370</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0.020370</td>\n",
+       "      <td>0.020370</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0.018562</td>\n",
+       "      <td>0.018562</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>0.018562</td>\n",
+       "      <td>0.018562</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.016925</td>\n",
+       "      <td>0.016925</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>0.015967</td>\n",
+       "      <td>0.015967</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>0.015967</td>\n",
+       "      <td>0.015967</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.015261</td>\n",
+       "      <td>0.015261</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.015261</td>\n",
+       "      <td>0.015261</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>0.015183</td>\n",
+       "      <td>0.015183</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.011894</td>\n",
+       "      <td>0.011894</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.011461</td>\n",
+       "      <td>0.011461</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        hubs  authorities  vertex\n",
+       "16  0.075003     0.075003      34\n",
+       "17  0.071413     0.071413       1\n",
+       "19  0.063719     0.063719       3\n",
+       "18  0.062002     0.062002      33\n",
+       "20  0.053427     0.053427       2\n",
+       "23  0.045682     0.045682       9\n",
+       "24  0.045495     0.045495      14\n",
+       "21  0.042423     0.042423       4\n",
+       "22  0.038376     0.038376      32\n",
+       "30  0.035106     0.035106      31\n",
+       "28  0.034343     0.034343       8\n",
+       "25  0.030157     0.030156      24\n",
+       "2   0.029713     0.029713      20\n",
+       "29  0.027112     0.027112      30\n",
+       "31  0.026813     0.026813      28\n",
+       "5   0.026332     0.026332      29\n",
+       "6   0.020626     0.020626      10\n",
+       "8   0.020370     0.020370      15\n",
+       "9   0.020370     0.020370      16\n",
+       "12  0.020370     0.020370      19\n",
+       "13  0.020370     0.020370      21\n",
+       "15  0.020370     0.020370      23\n",
+       "11  0.018562     0.018562      18\n",
+       "14  0.018562     0.018562      22\n",
+       "7   0.016925     0.016925      13\n",
+       "26  0.015967     0.015967       6\n",
+       "27  0.015967     0.015967       7\n",
+       "0   0.015261     0.015261       5\n",
+       "1   0.015261     0.015261      11\n",
+       "32  0.015183     0.015183      27\n",
+       "4   0.011894     0.011894      26\n",
+       "3   0.011461     0.011461      25"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sort_h.head(32)"
    ]
@@ -379,9 +777,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cugraph_dev",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
-   "name": "cugraph_dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -393,7 +791,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f708a36acfaef0acf74ccd43dfb58100269bf08fb79032a1e0a6f35bd9856f51"
+   }
   }
  },
  "nbformat": 4,
