--- a/notebooks/link_prediction/Jaccard-Similarity.ipynb
+++ b/notebooks/link_prediction/Jaccard-Similarity.ipynb
@@ -17,12 +17,12 @@
     "\n",
     "    Original Authors: Brad Rees\n",
     "    Created:   10/14/2019\n",
-    "    Last Edit: 08/16/2020\n",
+    "    Last Edit: 06/22/2022\n",
     "\n",
-    "RAPIDS Versions: 0.14\n",
+    "RAPIDS Versions: 22.08\n",
     "\n",
     "Test Hardware\n",
-    "* GV100 32G, CUDA 10.2\n"
+    "* Tesla V100 32G, CUDA 11.5\n"
    ]
   },
   {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,27 +221,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Read the CSV datafile using cuDF\n",
-    "data file is actually _tab_ separated, so we need to set the delimiter"
+    "### Create an Edgelist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Test file  \n",
-    "datafile='../data/karate-data.csv'\n",
-    "\n",
-    "gdf = cudf.read_csv(datafile, delimiter='\\t', names=['src', 'dst'], dtype=['int32', 'int32'] )"
+    "from cugraph.experimental.datasets import karate\n",
+    "gdf = karate.get_edgelist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(156, 2)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Let's look at the DataFrame. There should be two columns and 156 records\n",
     "gdf.shape"
@@ -249,9 +257,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>src</th>\n",
+       "      <th>dst</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   src  dst\n",
+       "0    1    2\n",
+       "1    1    3\n",
+       "2    1    4\n",
+       "3    1    5\n",
+       "4    1    6"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Look at the first few data records - the output should be two columns: 'src' and 'dst'\n",
     "gdf.head()"
@@ -266,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,9 +354,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# How many vertices are in the graph?  Remember that Graph is zero based\n",
     "G.number_of_vertices()"
@@ -306,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,9 +405,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vertices 34 and 33 are most similar with score: 0.5263158\n",
+      "Vertices 33 and 34 are most similar with score: 0.5263158\n"
+     ]
+    }
+   ],
    "source": [
     "# Which two vertices are the most similar?\n",
     "print_most_similar_jaccard(jdf)"
@@ -336,9 +433,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vertices 4 and 8 are similar with score: 0.42857143\n",
+      "Vertices 8 and 4 are similar with score: 0.42857143\n",
+      "Vertices 34 and 33 are similar with score: 0.5263158\n",
+      "Vertices 33 and 34 are similar with score: 0.5263158\n"
+     ]
+    }
+   ],
    "source": [
     "### let's look at all similarities over a threshold\n",
     "print_jaccard_threshold(jdf, 0.4)"
@@ -346,9 +454,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vertices 33 and 34 are similar with score: 0.5263158\n",
+      "Vertices 4 and 8 are similar with score: 0.42857143\n",
+      "Vertices 1 and 2 are similar with score: 0.3888889\n",
+      "Vertices 4 and 14 are similar with score: 0.375\n",
+      "Vertices 2 and 4 are similar with score: 0.36363637\n",
+      "Vertices 3 and 4 are similar with score: 0.33333334\n",
+      "Vertices 6 and 7 are similar with score: 0.33333334\n",
+      "Vertices 2 and 8 are similar with score: 0.3\n",
+      "Vertices 1 and 4 are similar with score: 0.29411766\n",
+      "Vertices 9 and 31 are similar with score: 0.2857143\n",
+      "Vertices 24 and 30 are similar with score: 0.2857143\n",
+      "Vertices 3 and 8 are similar with score: 0.27272728\n",
+      "Vertices 2 and 14 are similar with score: 0.27272728\n",
+      "Vertices 2 and 3 are similar with score: 0.26666668\n",
+      "Vertices 3 and 14 are similar with score: 0.25\n",
+      "Vertices 1 and 3 are similar with score: 0.23809524\n",
+      "Vertices 9 and 33 are similar with score: 0.21428572\n",
+      "Vertices 7 and 17 are similar with score: 0.2\n",
+      "Vertices 5 and 11 are similar with score: 0.2\n",
+      "Vertices 25 and 26 are similar with score: 0.2\n",
+      "Vertices 6 and 17 are similar with score: 0.2\n",
+      "Vertices 27 and 30 are similar with score: 0.2\n",
+      "Vertices 1 and 8 are similar with score: 0.1764706\n",
+      "Vertices 1 and 14 are similar with score: 0.16666667\n",
+      "Vertices 30 and 34 are similar with score: 0.16666667\n",
+      "Vertices 5 and 7 are similar with score: 0.16666667\n",
+      "Vertices 6 and 11 are similar with score: 0.16666667\n",
+      "Vertices 24 and 34 are similar with score: 0.15789473\n",
+      "Vertices 3 and 9 are similar with score: 0.15384616\n",
+      "Vertices 4 and 13 are similar with score: 0.14285715\n",
+      "Vertices 30 and 33 are similar with score: 0.14285715\n",
+      "Vertices 31 and 33 are similar with score: 0.14285715\n",
+      "Vertices 24 and 33 are similar with score: 0.13333334\n",
+      "Vertices 29 and 32 are similar with score: 0.125\n",
+      "Vertices 25 and 32 are similar with score: 0.125\n",
+      "Vertices 26 and 32 are similar with score: 0.125\n",
+      "Vertices 24 and 28 are similar with score: 0.125\n",
+      "Vertices 1 and 5 are similar with score: 0.11764706\n",
+      "Vertices 1 and 11 are similar with score: 0.11764706\n",
+      "Vertices 1 and 6 are similar with score: 0.11111111\n",
+      "Vertices 1 and 7 are similar with score: 0.11111111\n",
+      "Vertices 31 and 34 are similar with score: 0.10526316\n",
+      "Vertices 9 and 34 are similar with score: 0.1\n",
+      "Vertices 2 and 18 are similar with score: 0.1\n",
+      "Vertices 2 and 22 are similar with score: 0.1\n",
+      "Vertices 32 and 34 are similar with score: 0.0952381\n",
+      "Vertices 2 and 20 are similar with score: 0.09090909\n",
+      "Vertices 15 and 33 are similar with score: 0.07692308\n",
+      "Vertices 16 and 33 are similar with score: 0.07692308\n",
+      "Vertices 19 and 33 are similar with score: 0.07692308\n",
+      "Vertices 21 and 33 are similar with score: 0.07692308\n",
+      "Vertices 23 and 33 are similar with score: 0.07692308\n",
+      "Vertices 32 and 33 are similar with score: 0.05882353\n",
+      "Vertices 1 and 13 are similar with score: 0.05882353\n",
+      "Vertices 1 and 18 are similar with score: 0.05882353\n",
+      "Vertices 1 and 22 are similar with score: 0.05882353\n",
+      "Vertices 15 and 34 are similar with score: 0.055555556\n",
+      "Vertices 16 and 34 are similar with score: 0.055555556\n",
+      "Vertices 1 and 20 are similar with score: 0.055555556\n",
+      "Vertices 19 and 34 are similar with score: 0.055555556\n",
+      "Vertices 21 and 34 are similar with score: 0.055555556\n",
+      "Vertices 23 and 34 are similar with score: 0.055555556\n",
+      "Vertices 27 and 34 are similar with score: 0.055555556\n",
+      "Vertices 29 and 34 are similar with score: 0.05263158\n",
+      "Vertices 1 and 9 are similar with score: 0.05\n",
+      "Vertices 28 and 34 are similar with score: 0.05\n",
+      "Vertices 3 and 33 are similar with score: 0.04761905\n"
+     ]
+    }
+   ],
    "source": [
     "# Since it is a small graph we can print all scores, notice that only vertices that are neighbors are being compared\n",
     "#\n",
@@ -370,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,9 +572,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vertices 15 and 16 are most similar with score: 1.0\n",
+      "Vertices 15 and 19 are most similar with score: 1.0\n",
+      "Vertices 15 and 21 are most similar with score: 1.0\n",
+      "Vertices 15 and 23 are most similar with score: 1.0\n",
+      "Vertices 21 and 15 are most similar with score: 1.0\n",
+      "Vertices 21 and 16 are most similar with score: 1.0\n",
+      "Vertices 21 and 19 are most similar with score: 1.0\n",
+      "Vertices 21 and 23 are most similar with score: 1.0\n",
+      "Vertices 18 and 22 are most similar with score: 1.0\n",
+      "Vertices 23 and 15 are most similar with score: 1.0\n",
+      "Vertices 23 and 16 are most similar with score: 1.0\n",
+      "Vertices 23 and 19 are most similar with score: 1.0\n",
+      "Vertices 23 and 21 are most similar with score: 1.0\n",
+      "Vertices 19 and 15 are most similar with score: 1.0\n",
+      "Vertices 19 and 16 are most similar with score: 1.0\n",
+      "Vertices 19 and 21 are most similar with score: 1.0\n",
+      "Vertices 19 and 23 are most similar with score: 1.0\n",
+      "Vertices 16 and 15 are most similar with score: 1.0\n",
+      "Vertices 16 and 19 are most similar with score: 1.0\n",
+      "Vertices 16 and 21 are most similar with score: 1.0\n",
+      "Vertices 16 and 23 are most similar with score: 1.0\n",
+      "Vertices 22 and 18 are most similar with score: 1.0\n"
+     ]
+    }
+   ],
    "source": [
     "print_most_similar_jaccard(j2)"
    ]
@@ -420,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,9 +641,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pagerank</th>\n",
+       "      <th>vertex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.021979</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.021979</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.019605</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.021076</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.021006</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   pagerank  vertex\n",
+       "0  0.021979       5\n",
+       "1  0.021979      11\n",
+       "2  0.019605      20\n",
+       "3  0.021076      25\n",
+       "4  0.021006      26"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# take a peek at the PageRank values\n",
     "pr_df.head()"
@@ -447,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,9 +738,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vertices 1 and 2 are most similar with score: 0.5324633\n",
+      "Vertices 2 and 1 are most similar with score: 0.5324633\n"
+     ]
+    }
+   ],
    "source": [
     "print_most_similar_jaccard(wdf)"
    ]
@@ -472,20 +761,25 @@
     "---\n",
     "### It's that easy with cuGraph\n",
     "\n",
-    "Copyright (c) 2019-2020, NVIDIA CORPORATION.\n",
+    "Copyright (c) 2019-2022, NVIDIA CORPORATION.\n",
     "\n",
     "Licensed under the Apache License, Version 2.0 (the \"License\");  you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0\n",
     "\n",
     "Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n",
     "___"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cugraph_dev",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
-   "name": "cugraph_dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -497,7 +791,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f708a36acfaef0acf74ccd43dfb58100269bf08fb79032a1e0a6f35bd9856f51"
+   }
   }
  },
  "nbformat": 4,
