--- a/notebooks/sampling/RandomWalk.ipynb
+++ b/notebooks/sampling/RandomWalk.ipynb
@@ -9,9 +9,10 @@
     "In this notebook, we will compute the Random Walk from a set of seeds using cuGraph.  \n",
     "\n",
     "\n",
-    "| Author Credit |    Date    |  Update      | cuGraph Version |  Test Hardware |\n",
-    "| --------------|------------|--------------|-----------------|----------------|\n",
-    "| Brad Rees     | 04/20/2021 | created      | 0.19            | GV100, CUDA 11.0\n",
+    "| Author Credit |    Date    |  Update        | cuGraph Version |  Test Hardware |\n",
+    "| --------------|------------|----------------|-----------------|----------------|\n",
+    "| Brad Rees     | 04/20/2021 | created        | 0.19            | GV100, CUDA 11.0\n",
+    "| Ralph Liu     | 06/22/2022 | updated/tested | 22.08           | TV100, CUDA 11.5\n",
     "\n",
     "Currently NetworkX does not have a random walk function.  There is code on StackOverflow that generats a random walk by getting a vertice and then randomly selection a neighbor and then repeating the process.  "
    ]
@@ -34,31 +35,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#  Import the modules\n",
     "import cugraph\n",
-    "import cudf"
+    "import cudf\n",
+    "\n",
+    "# Import a built-in dataset\n",
+    "from cugraph.experimental.datasets import karate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read The Data\n",
-    "# Define the path to the test data  \n",
-    "datafile='../data/karate-data.csv'\n",
-    "\n",
-    "gdf = cudf.read_csv(datafile, delimiter='\\t', names=['src', 'dst'], dtype=['int32', 'int32'] )"
+    "gdf = karate.get_edgelist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,9 +78,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(34, 78)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# some stats on the graph\n",
     "(G.number_of_nodes(), G.number_of_edges() )"
@@ -88,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,18 +141,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    17\n",
+       "1     7\n",
+       "2    17\n",
+       "3     7\n",
+       "4    19\n",
+       "5    34\n",
+       "6    28\n",
+       "7     3\n",
+       "Name: vertex_set, dtype: int32"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rw.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17 7 17 7  \n",
+      "19 34 28 3  \n"
+     ]
+    }
+   ],
    "source": [
     "idx = 0\n",
     "for i in range(len(seeds)):\n",
@@ -156,7 +195,7 @@
    "metadata": {},
    "source": [
     "-----\n",
-    "Copyright (c) 2021, NVIDIA CORPORATION.\n",
+    "Copyright (c) 2022, NVIDIA CORPORATION.\n",
     "\n",
     "Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0\n",
     "\n",
@@ -166,9 +205,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cugraph_dev",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
-   "name": "cugraph_dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -180,7 +219,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f708a36acfaef0acf74ccd43dfb58100269bf08fb79032a1e0a6f35bd9856f51"
+   }
   }
  },
  "nbformat": 4,
