--- a/notebooks/structure/Symmetrize.ipynb
+++ b/notebooks/structure/Symmetrize.ipynb
@@ -11,13 +11,13 @@
     "Notebook Credits\n",
     "* Original Authors: Bradley Rees and James Wyles\n",
     "* Created:   08/13/2019\n",
-    "* Updated:   03/02/2020\n",
+    "* Updated:   06/22/2022\n",
     "\n",
-    "RAPIDS Versions: 0.13    \n",
+    "RAPIDS Versions: 22.08   \n",
     "\n",
     "Test Hardware\n",
     "\n",
-    "* GV100 32G, CUDA 10.2\n",
+    "* Tesla V100 32G, CUDA 11.5\n",
     "\n",
     "\n",
     "## Introduction\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,20 +76,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load the full symmetrized dataset for comparison\n",
-    "datafile='../data/karate-data.csv'\n",
-    "test_gdf = cudf.read_csv(datafile, names=[\"src\", \"dst\"], delimiter='\\t', dtype=[\"int32\", \"int32\"] )"
+    "# Import a built-in dataset\n",
+    "from cugraph.experimental.datasets import karate\n",
+    "\n",
+    "# This is the symmetrized dataset\n",
+    "test_gdf = karate.get_edgelist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unsymmetrized Graph\n",
+      "\tNumber of Edges: 78\n",
+      "Baseline Graph\n",
+      "\tNumber of Edges: 156\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Unsymmetrized Graph\")\n",
     "print(\"\\tNumber of Edges: \" + str(len(gdf)))\n",
@@ -106,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,9 +130,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pagerank</th>\n",
+       "      <th>vertex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>0.100917</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    pagerank  vertex\n",
+       "33  0.100917      34"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# best PR score is\n",
     "m = gdf_page['pagerank'].max()\n",
@@ -136,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,9 +203,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unsymmetrized Graph\n",
+      "\tNumber of Edges: 78\n",
+      "Symmetrized Graph\n",
+      "\tNumber of Edges: 156\n",
+      "Baseline Graph\n",
+      "\tNumber of Edges: 156\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Unsymmetrized Graph\")\n",
     "print(\"\\tNumber of Edges: \" + str(len(gdf)))\n",
@@ -162,7 +233,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "Copyright (c) 2019-2020, NVIDIA CORPORATION.\n",
+    "Copyright (c) 2019-2022, NVIDIA CORPORATION.\n",
     "\n",
     "Licensed under the Apache License, Version 2.0 (the \"License\");  you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0\n",
     "\n",
@@ -173,9 +244,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cugraph_dev",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
-   "name": "cugraph_dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -187,7 +258,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f708a36acfaef0acf74ccd43dfb58100269bf08fb79032a1e0a6f35bd9856f51"
+   }
   }
  },
  "nbformat": 4,
