--- a/notebooks/community/Louvain.ipynb
+++ b/notebooks/community/Louvain.ipynb
@@ -158,10 +158,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# You can also just get the edgelist\n",
     "gdf = karate.get_edgelist()\n",
     "\n",
     "# The algorithm also requires that there are vertex weights.  Just use 1.0 \n",
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +183,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -247,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -302,13 +303,13 @@
      "output_type": "stream",
      "text": [
       "Partition 0:\n",
-      "[32, 25, 26, 29]\n",
+      "[25, 26, 29, 32]\n",
       "Partition 1:\n",
-      "[27, 34, 33, 9, 24, 28, 30, 31, 15, 16, 19, 21, 23]\n",
+      "[15, 16, 19, 21, 23, 34, 33, 9, 24, 30, 31, 28, 27]\n",
       "Partition 2:\n",
-      "[6, 7, 5, 11, 17]\n",
+      "[5, 11, 17, 6, 7]\n",
       "Partition 3:\n",
-      "[12, 1, 3, 2, 4, 14, 8, 20, 10, 13, 18, 22]\n"
+      "[20, 10, 13, 18, 22, 1, 3, 2, 4, 14, 8, 12]\n"
      ]
     }
    ],
@@ -325,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -352,13 +353,13 @@
      "output_type": "stream",
      "text": [
       "Partition 0:\n",
-      "[32, 25, 26, 29]\n",
+      "[25, 26, 29, 32]\n",
       "Partition 1:\n",
-      "[27, 34, 33, 9, 24, 28, 30, 31, 15, 16, 19, 21, 23]\n",
+      "[15, 16, 19, 21, 23, 34, 33, 9, 24, 30, 31, 28, 27]\n",
       "Partition 2:\n",
-      "[6, 7, 5, 11, 17]\n",
+      "[5, 11, 17, 6, 7]\n",
       "Partition 3:\n",
-      "[12, 1, 3, 2, 4, 14, 8, 20, 10, 13, 18, 22]\n"
+      "[20, 10, 13, 18, 22, 1, 3, 2, 4, 14, 8, 12]\n"
      ]
     }
    ],
@@ -389,9 +390,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cugraph_dev",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
-   "name": "cugraph_dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -403,7 +404,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f708a36acfaef0acf74ccd43dfb58100269bf08fb79032a1e0a6f35bd9856f51"
+   }
   }
  },
  "nbformat": 4,
