--- a/notebooks/community/Subgraph-Extraction.ipynb
+++ b/notebooks/community/Subgraph-Extraction.ipynb
@@ -12,12 +12,12 @@
     "Notebook Credits\n",
     "* Original Authors: Bradley Rees\n",
     "* Created:   10/16/2019\n",
-    "* Last Edit: 08/16/2020\n",
+    "* Last Edit: 06/22/2022\n",
     "\n",
-    "RAPIDS Versions: 0.13\n",
+    "RAPIDS Versions: 0.15\n",
     "\n",
     "Test Hardware\n",
-    "* GV100 32G, CUDA 10.2\n"
+    "* Tesla V100 32G, CUDA 11.5\n"
    ]
   },
   {
@@ -86,13 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import needed libraries\n",
     "import cugraph\n",
-    "import cudf"
+    "import cudf\n",
+    "\n",
+    "# Import a built-in dataset\n",
+    "from cugraph.experimental.datasets import karate"
    ]
   },
   {
@@ -100,26 +103,6 @@
    "metadata": {},
    "source": [
     "## Read data using cuDF"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Test file    \n",
-    "datafile='../data//karate-data.csv'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# read the data using cuDF\n",
-    "gdf = cudf.read_csv(datafile, delimiter='\\t', names=['src', 'dst'], dtype=['int32', 'int32'] )"
    ]
   },
   {
@@ -132,28 +115,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# You can also just get the edgelist\n",
+    "gdf = karate.get_edgelist()\n",
+    "\n",
     "# The louvain algorithm requires that there are vertex weights.  Just use 1.0 \n",
     "gdf[\"data\"] = 1.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create a Graph \n",
     "G = cugraph.Graph()\n",
-    "G.from_cudf_edgelist(gdf, source='src', destination='dst', edge_attr='data')"
+    "G = cugraph.from_cudf_edgelist(gdf, source=\"src\", destination=\"dst\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,18 +159,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 partition detected\n"
+     ]
+    }
+   ],
    "source": [
     "print(str(len(part_ids)) + \" partition detected\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Partition 0:\n",
+      "[25, 26, 29, 32]\n",
+      "Partition 1:\n",
+      "[15, 16, 19, 21, 23, 34, 33, 9, 24, 30, 31, 28, 27]\n",
+      "Partition 2:\n",
+      "[5, 11, 17, 6, 7]\n",
+      "Partition 3:\n",
+      "[20, 10, 13, 18, 22, 1, 3, 2, 4, 14, 8, 12]\n"
+     ]
+    }
+   ],
    "source": [
     "for p in range(len(part_ids)):\n",
     "    part = []\n",
@@ -205,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,9 +223,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "v = cudf.Series(vids['vertex'])\n",
     "len(v)"
@@ -224,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,9 +253,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Main Graph\n",
+      "\tNumber of Vertices: 34\n",
+      "\tNumber of Edges:    78\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Main Graph\")\n",
     "print(\"\\tNumber of Vertices: \" + str(G.number_of_vertices()))\n",
@@ -244,9 +274,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subgraph\n",
+      "\tNumber of Vertices: 13\n",
+      "\tNumber of Edges:    25\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Subgraph\")\n",
     "print(\"\\tNumber of Vertices: \" + str(subG.number_of_vertices()))\n",
@@ -255,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,9 +305,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(subDF)"
    ]
@@ -288,9 +339,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cugraph_dev",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
-   "name": "cugraph_dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -302,7 +353,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f708a36acfaef0acf74ccd43dfb58100269bf08fb79032a1e0a6f35bd9856f51"
+   }
   }
  },
  "nbformat": 4,
