--- a/notebooks/structure/Renumber-2.ipynb
+++ b/notebooks/structure/Renumber-2.ipynb
@@ -20,13 +20,13 @@
     "| Brad Rees     | 08/13/2019 | created             |\n",
     "| Brad Rees     | 07/08/2020 | updated             |\n",
     "| Ralph Liu     | 06/01/2022 | docs & code change  |\n",
+    "|               | 06/22/2022 | update              |\n",
     "\n",
-    "RAPIDS Versions: 0.13  \n",
-    "cuGraph Version: 22.06  \n",
+    "RAPIDS Versions: 22.08  \n",
     "\n",
     "Test Hardware\n",
     "\n",
-    "* GV100 32G, CUDA 11.5\n",
+    "* Tesla V100 32G, CUDA 11.5\n",
     "\n",
     "\n",
     "## Introduction\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,16 +79,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read the data\n",
-    "# the file contains an index column that will be ignored\n",
-    "\n",
-    "datafile='../data/cyber.csv'\n",
-    "\n",
-    "gdf = cudf.read_csv(datafile, delimiter=',', names=['idx','srcip','dstip'], dtype=['int32','str', 'str'], skiprows=1, usecols=['srcip', 'dstip'] )"
+    "# Import a built-in dataset\n",
+    "from cugraph.experimental.datasets import cyber\n",
+    "gdf = cyber.get_edgelist()"
    ]
   },
   {
@@ -100,30 +97,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>idx</th>\n",
+       "      <th>src</th>\n",
+       "      <th>dst</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>﻿59.166.0.0</td>\n",
+       "      <td>149.171.126.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>59.166.0.0</td>\n",
+       "      <td>149.171.126.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>59.166.0.6</td>\n",
+       "      <td>149.171.126.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>59.166.0.5</td>\n",
+       "      <td>149.171.126.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4</td>\n",
+       "      <td>59.166.0.3</td>\n",
+       "      <td>149.171.126.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   idx          src            dst\n",
+       "1    0  ﻿59.166.0.0  149.171.126.6\n",
+       "2    1   59.166.0.0  149.171.126.9\n",
+       "3    2   59.166.0.6  149.171.126.7\n",
+       "4    3   59.166.0.5  149.171.126.5\n",
+       "5    4   59.166.0.3  149.171.126.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# trim\n",
+    "gdf = gdf[1:]\n",
+    "\n",
     "# take a peek at the data\n",
     "gdf.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Since IP columns are strings, we first need to convert them to integers\n",
-    "gdf['src_ip'] = gdf['srcip'].str.ip2int()\n",
-    "gdf['dst_ip'] = gdf['dstip'].str.ip2int()"
+    "gdf['src_ip'] = gdf['src'].str.ip2int()\n",
+    "gdf['dst_ip'] = gdf['dst'].str.ip2int()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "edges: 2546575\n",
+      "max: 3758096389 min: 59 range: 3758096331\n"
+     ]
+    }
+   ],
    "source": [
     "# look at that data and the range of values\n",
     "maxT = max(gdf['src_ip'].max(), gdf['dst_ip'].max())\n",
@@ -153,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,9 +253,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>idx_x</th>\n",
+       "      <th>src_x</th>\n",
+       "      <th>dst_x</th>\n",
+       "      <th>src_ip</th>\n",
+       "      <th>dst_ip</th>\n",
+       "      <th>idx_y</th>\n",
+       "      <th>src_y</th>\n",
+       "      <th>dst_y</th>\n",
+       "      <th>src_r</th>\n",
+       "      <th>dst_r</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>order</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>﻿59.166.0.0</td>\n",
+       "      <td>149.171.126.6</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2511044102</td>\n",
+       "      <td>0</td>\n",
+       "      <td>﻿59.166.0.0</td>\n",
+       "      <td>149.171.126.6</td>\n",
+       "      <td>43</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>59.166.0.0</td>\n",
+       "      <td>149.171.126.9</td>\n",
+       "      <td>1000734720</td>\n",
+       "      <td>2511044105</td>\n",
+       "      <td>1</td>\n",
+       "      <td>59.166.0.0</td>\n",
+       "      <td>149.171.126.9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>59.166.0.6</td>\n",
+       "      <td>149.171.126.7</td>\n",
+       "      <td>1000734726</td>\n",
+       "      <td>2511044103</td>\n",
+       "      <td>2</td>\n",
+       "      <td>59.166.0.6</td>\n",
+       "      <td>149.171.126.7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>59.166.0.5</td>\n",
+       "      <td>149.171.126.5</td>\n",
+       "      <td>1000734725</td>\n",
+       "      <td>2511044101</td>\n",
+       "      <td>3</td>\n",
+       "      <td>59.166.0.5</td>\n",
+       "      <td>149.171.126.5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4</td>\n",
+       "      <td>59.166.0.3</td>\n",
+       "      <td>149.171.126.0</td>\n",
+       "      <td>1000734723</td>\n",
+       "      <td>2511044096</td>\n",
+       "      <td>4</td>\n",
+       "      <td>59.166.0.3</td>\n",
+       "      <td>149.171.126.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       idx_x        src_x          dst_x      src_ip      dst_ip  idx_y  \\\n",
+       "order                                                                     \n",
+       "1          0  ﻿59.166.0.0  149.171.126.6          59  2511044102      0   \n",
+       "2          1   59.166.0.0  149.171.126.9  1000734720  2511044105      1   \n",
+       "3          2   59.166.0.6  149.171.126.7  1000734726  2511044103      2   \n",
+       "4          3   59.166.0.5  149.171.126.5  1000734725  2511044101      3   \n",
+       "5          4   59.166.0.3  149.171.126.0  1000734723  2511044096      4   \n",
+       "\n",
+       "             src_y          dst_y  src_r  dst_r  \n",
+       "order                                            \n",
+       "1      ﻿59.166.0.0  149.171.126.6     43     30  \n",
+       "2       59.166.0.0  149.171.126.9      4     33  \n",
+       "3       59.166.0.6  149.171.126.7      7     34  \n",
+       "4       59.166.0.5  149.171.126.5      2     26  \n",
+       "5       59.166.0.3  149.171.126.0      5     35  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gdf.head()"
    ]
@@ -185,9 +408,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "edges: 2546575\n",
+      "max: 51 min: 0 range: 52\n"
+     ]
+    }
+   ],
    "source": [
     "# look at that data and the range of values\n",
     "maxT = max(gdf['src_r'].max(), gdf['dst_r'].max())\n",
@@ -209,9 +441,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique IPs: 52\n"
+     ]
+    }
+   ],
    "source": [
     "# Merge the renumbered columns\n",
     "src, dst = gdf['src_r'].to_cupy(), gdf['dst_r'].to_cupy()\n",
@@ -225,7 +465,7 @@
    "metadata": {},
    "source": [
     "___\n",
-    "Copyright (c) 2019-2020, NVIDIA CORPORATION.\n",
+    "Copyright (c) 2019-2022, NVIDIA CORPORATION.\n",
     "\n",
     "Licensed under the Apache License, Version 2.0 (the \"License\");  you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0\n",
     "\n",
@@ -235,11 +475,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-  },
   "kernelspec": {
-   "display_name": "Python 3.6.9 64-bit",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -253,7 +490,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f708a36acfaef0acf74ccd43dfb58100269bf08fb79032a1e0a6f35bd9856f51"
+   }
   }
  },
  "nbformat": 4,
