--- a/notebooks/traversal/SSSP.ipynb
+++ b/notebooks/traversal/SSSP.ipynb
@@ -11,14 +11,14 @@
     "Notebook Credits\n",
     "* Original Authors: Bradley Rees and James Wyles\n",
     "* available since release 0.6\n",
-    "* Last Edit: 08/16/2020\n",
+    "* Last Edit: 06/22/2022\n",
     "\n",
     "\n",
-    "RAPIDS Versions: 0.12.0   \n",
+    "RAPIDS Versions: 22.08  \n",
     "\n",
     "Test Hardware\n",
     "\n",
-    "* GV100 32G, CUDA 10.0\n",
+    "* Tesla V100 32G, CUDA 11.5\n",
     "\n",
     "\n",
     "\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,31 +79,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Read the data and adjust the vertex IDs"
+    "### Create an Edgelist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Test file  - using the classic Karate club dataset.  \n",
-    "datafile='../data/karate-data.csv'"
+    "# Import a built-in dataset\n",
+    "from cugraph.experimental.datasets import karate\n",
+    "\n",
+    "gdf = karate.get_edgelist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf = cudf.read_csv(datafile, names=[\"src\", \"dst\"], delimiter='\\t', dtype=[\"int32\", \"int32\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,9 +106,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>src</th>\n",
+       "      <th>dst</th>\n",
+       "      <th>data</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   src  dst  data\n",
+       "0    1    2   1.0\n",
+       "1    1    3   1.0\n",
+       "2    1    4   1.0\n",
+       "3    1    5   1.0\n",
+       "4    1    6   1.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gdf.head()"
    ]
@@ -129,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,9 +218,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 :  [5, 1]\n",
+      "11 :  [11, 1]\n",
+      "20 :  [20, 1]\n",
+      "25 :  [25, 32, 1]\n",
+      "26 :  [26, 32, 1]\n",
+      "29 :  [29, 3, 1]\n",
+      "10 :  [10, 3, 1]\n",
+      "13 :  [13, 1]\n",
+      "15 :  [15, 34, 32, 1]\n",
+      "16 :  [16, 34, 32, 1]\n",
+      "17 :  [17, 6, 1]\n",
+      "18 :  [18, 1]\n",
+      "19 :  [19, 34, 32, 1]\n",
+      "21 :  [21, 34, 32, 1]\n",
+      "22 :  [22, 1]\n",
+      "23 :  [23, 34, 32, 1]\n",
+      "34 :  [34, 32, 1]\n",
+      "33 :  [33, 3, 1]\n",
+      "3 :  [3, 1]\n",
+      "2 :  [2, 1]\n",
+      "4 :  [4, 1]\n",
+      "32 :  [32, 1]\n",
+      "9 :  [9, 1]\n",
+      "14 :  [14, 1]\n",
+      "24 :  [24, 34, 32, 1]\n",
+      "6 :  [6, 1]\n",
+      "7 :  [7, 1]\n",
+      "8 :  [8, 1]\n",
+      "30 :  [30, 34, 32, 1]\n",
+      "31 :  [31, 2, 1]\n",
+      "28 :  [28, 3, 1]\n",
+      "1 :  [1]\n",
+      "27 :  [27, 34, 32, 1]\n",
+      "12 :  [12, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the paths\n",
     "for index, row in df.to_pandas().iterrows():\n",
@@ -173,7 +282,7 @@
    "metadata": {},
    "source": [
     "___\n",
-    "Copyright (c) 2019-2020, NVIDIA CORPORATION.\n",
+    "Copyright (c) 2019-2022, NVIDIA CORPORATION.\n",
     "\n",
     "Licensed under the Apache License, Version 2.0 (the \"License\");  you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0\n",
     "\n",
@@ -184,7 +293,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -198,7 +307,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f708a36acfaef0acf74ccd43dfb58100269bf08fb79032a1e0a6f35bd9856f51"
+   }
   }
  },
  "nbformat": 4,
